--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -34,7 +34,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnCadastrar"
         android:layout_width="125dp"
         android:layout_height="65dp"
         android:layout_marginStart="56dp"
@@ -47,7 +47,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btnListar"
         android:layout_width="125dp"
         android:layout_height="65dp"
         android:layout_marginStart="48dp"
@@ -56,11 +56,11 @@
         android:textColor="@color/white"
         android:text="@string/menu_listar_produtos"
         android:textSize="13sp"
-        app:layout_constraintStart_toEndOf="@+id/button"
+        app:layout_constraintStart_toEndOf="@+id/btnCadastrar"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/btnAlterar"
         android:layout_width="125dp"
         android:layout_height="65dp"
         android:layout_marginStart="56dp"
@@ -70,10 +70,10 @@
         android:text="@string/menu_alterar_produto"
         android:textSize="13sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/btnCadastrar" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/btnDeletar"
         android:layout_width="125dp"
         android:layout_height="65dp"
         android:layout_marginStart="48dp"
@@ -82,8 +82,8 @@
         android:textColor="@color/white"
         android:text="@string/menu_deletar_produto"
         android:textSize="13sp"
-        app:layout_constraintStart_toEndOf="@+id/button4"
-        app:layout_constraintTop_toBottomOf="@+id/button3" />
+        app:layout_constraintStart_toEndOf="@+id/btnAlterar"
+        app:layout_constraintTop_toBottomOf="@+id/btnListar" />
 
     <ImageView
         android:id="@+id/imageView2"
