--- a/app/src/main/res/layout/activity_listar_produtos.xml
+++ b/app/src/main/res/layout/activity_listar_produtos.xml
@@ -33,7 +33,7 @@
         android:textSize="20sp"/>
 
     <ListView
-        android:id="@+id/list_view"
+        android:id="@+id/lista_produtos"
         android:layout_width="match_parent"
         android:layout_height="588dp"
         android:layout_marginTop="10dp">
